WebNode::IsFocused() should not ignore pending sheets.

The autofill code is calling IsFocused while pending stylesheets are
loading. That doesn't mean we should decide the focusability of the
form element at that point in time ignoring pending stylesheets as the
pending sheets are blocking rendering.

This fixes the incorrect triggering of transitions in 831590.

Bug: 831590
Change-Id: Ie041014bdcd4ba74f774919718e9fc3fc4540c6b
Reviewed-on: https://chromium-review.googlesource.com/1019401
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Commit-Queue: Rune Lillesveen <futhark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#552746}