third_party/blink/renderer/core/exported/web_node.cc
@@ -134,7 +134,7 @@ bool WebNode::IsCommentNode() const {
 bool WebNode::IsFocusable() const {
   if (!private_->IsElementNode())
     return false;
-  private_->GetDocument().UpdateStyleAndLayoutIgnorePendingStylesheets();
+  private_->GetDocument().UpdateStyleAndLayoutTreeForNode(private_.Get());
   return ToElement(private_.Get())->IsFocusable();
 }
 
